k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exam-backend
  namespace: exam-platform
  labels:
    app: exam-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: exam-backend
  template:
    metadata:
      labels:
        app: exam-backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
    spec:
      containers:
        - name: exam-backend
          image: "833082650522.dkr.ecr.ap-south-1.amazonaws.com/exam-platform-backend:latest" # replaced by Jenkins during deploy
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /readyz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
