k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exam-backend-ingress
  namespace: exam-platform
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host:    
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: exam-backend-svc
                port:
                  number: 80
